--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
       <li>
-        <a class="nav-link" href="{{ url_for('contact')}}" >Contact</a>
+        <a class="nav-link" href="{{ url_for('profile')}}" >Profile</a>
       </li>
     </ul>
   </div>
