--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,6 +15,9 @@
       <li>
         <a class="nav-link" href="{{ url_for('profile')}}" >Profile</a>
       </li>
+      <li>
+        <a class="nav-link" href="{{ url_for('profiles')}}" >Profiles</a>
+      </li>
     </ul>
   </div>
 </nav>
