--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,8 @@
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/2b3455fdbc.js" crossorigin="anonymous"></script>
     {% block css %} {% endblock%}
   </head>
   <body>
