--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,8 +6,9 @@
             <img class=""src="{{ url_for('static', filename= 'uploads/'+ user[7]) }}" height="150px" width="150px" >
             <div class="columb ml-3">
                 <h5 class="mb-3"><strong>{{user[1]}} {{user[2]}}</strong></h5>
-                <i class="fas fa-envelope-open-text mb-3 text-muted"> {{user[3]}}</i>
-                <div><i class="fas fa-map-marker-alt text-muted"> {{user[5]}}</i></div>
+                <div><i class="fas fa-envelope-open-text mb-3 text-muted"> {{user[3]}}</i></div>
+                <div><i class="fas fa-map-marker-alt text-muted mb-3"> {{user[5]}}</i></div>
+                <div><i class="far fa-calendar text-muted"> Joined on {{user[8]}}</i></div>
             </div>
         </div>
         <h5 class="mt-4">About Me</h5>
